[package]
name = "tonlib"
version = "0.5.1"
edition = "2021"
description = "Rust SDK for The Open Network"
license = "MIT"
repository = "https://github.com/ston-fi/tonlib-rs"
include = [
    "src/*",
    "Cargo.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
base64-serde = "0.6"
bitreader = "0.3"
bitstream-io = "1"
crc = "3"
dashmap = "5"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
ipfs-api-backend-hyper = "0.6"
lazy_static = "1"
log = "0.4"
nacl = "0.5"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
sha2 = "0.10"
strum = { version = "0.24", features = ["derive"] }
pbkdf2 = "0.11"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
# tonlib-sys = "2023.06.0" //todo: replace 
tonlib-sys = { git = "https://github.com/ston-fi/tonlib-sys.git", rev = "aac0bb27e35f16276aabfefa7be8b70c5e2fae2a" }

[dev-dependencies]
tokio-test = "0.4"
log4rs = "1"
