[package]
name = "tonlib"
version = "0.6.6"
edition = "2021"
description = "Rust SDK for The Open Network"
license = "MIT"
repository = "https://github.com/ston-fi/tonlib-rs"
include = [
    "src/*",
    "Cargo.toml"
]
[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
base64-serde = "0.6"
bitreader = "0.3"
bitstream-io = "1"
crc = "3"
dashmap = "5"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
humantime-serde = "1.1"
lazy_static = "1"
log = "0.4"
nacl = "0.5"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
sha2 = "0.10"
strum = { version = "0.24", features = ["derive"] }
pbkdf2 = "0.11"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
tonlib-sys = "2023.6"

[dev-dependencies]
tokio-test = "0.4"
log4rs = "1"
